--- a/connexion.html
+++ b/connexion.html
@@ -22,7 +22,7 @@
               <h2>Connexion</h2>
               <form action="" method="post">
                 <div>
-                  <label for="email">Email </label>
+                  <label for="email">Email </label><label for="email">Email </label>
                   <input type="text" name="email" />
                 </div>
                 <div>
