--- a/connexion.html
+++ b/connexion.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Connexion</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/connexion.css">
   </head>
   <body>
     <main>
@@ -22,7 +22,7 @@
               <h2>Connexion</h2>
               <form action="" method="post">
                 <div>
-                  <label for="email">Email </label><label for="email">Email </label>
+                  <label for="email">Email </label>
                   <input type="text" name="email" />
                 </div>
                 <div>
