--- a/connexion.html
+++ b/connexion.html
@@ -6,55 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Connexion</title>
     <link rel="stylesheet" href="./assets/css/connexion.css">
+    <link rel="stylesheet" href="./assets/css/form.css">
+    <link rel="stylesheet" href="./assets/css/menu.css">
   </head>
   <body>
+    <header>
+      <nav id="navp">
+        <img src="./assets/img/logo1.png" alt="">
+        <ul id="headMenu">
+          <li><a href="">Home</a></li>
+          <li><a href="">Menu</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="./connexion.html">Connexion</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
-      <h1>Identifiez-vous ou créez un compte</h1>
-      <h3>J'ai un compte Pets Store</h3>
-      <p>
-        Connectez-vous pour accéder à votre compte et retrouver tous vos
-        avantages.
-      </p>
-      <div class="some-page-wrapper">
+      <div class="hearderConnexion">
+        <h1>Connexion</h1>
+          <p>
+            Connectez-vous pour accéder à votre compte et retrouver tous vos
+            avantages.
+          </p>
+      </div>
+      <div class="box">
         <div class="row">
           <div class="column">
             <div class="left-column">
-              <h2>Connexion</h2>
+              <h3>J'ai un compte <span class="logoTitre">PetStore</span></h3>
+              
               <form action="" method="post">
-                <div>
+                <div class="form-group">
                   <label for="email">Email </label>
                   <input type="text" name="email" />
                 </div>
-                <div>
+                <div class="form-group">
                   <label for="">Mot de passe</label>
                   <input type="text" name="password" />
                 </div>
-                <div>
-                  <button type="submit">Connexion</button>
+                <div class="form-group">
+                  <input type="submit" value="Connexion" id="submit" />
+                </div>
+                <div class="form-group">
+                  <a href="#">Mot de passe oublié ?</a>
                 </div>
               </form>
-              <p>
-                <a href="#">Mot de passe oublié ?</a>
-              </p>
             </div>
           </div>
           <div class="column">
             <div class="right-column">
-                <h3> Je crée mon compte Pets Store</h3>
+                <h3> Je crée mon compte <span class="logoTitre">PetStore</span></h3>
                <p><i>L'inscription est simple et gratuite !</i></p>
-               <div>
+               <div class="form-group">
                <p>
                     <ul>
-                        <li> Consulter vos points et remises de votre carte de fidélité Animalis</li>
+                        <li> Consulter vos points et remises de votre carte de fidélité PetStore</li>
                         <li>Gérez vos informations personnelles</li>
                         <li> Suivez vos commandes passées en magasin ou en ligne</li>
                         <li>et encore de nombreux avantages...</li>
                     </ul>
                 </p>
-                <div>
-                    <button type="submit">Créer un compte</button>
+                <div class="form-group">
+                    <input type="submit" value="Créer un compte" id="submit" />
                 </div>
-            </div> 
+            </div>
             </div>
           </div>
         </div>
