--- a/inscription.html
+++ b/inscription.html
@@ -25,10 +25,12 @@
 
     <h2>Inscription</h2>
     <fieldset>Email</h2>
-      <input type="text" name="email" placeholder="Email" />
-      <input type="text" name="emailconifrm" placeholder="Confirm Email" />
-      <input type="password" name="pass" placeholder="Password" />
-      <input type="password" name="cpass" placeholder="Confirm Password" />
+
+     <div> <input type="text" name="email" placeholder="Email" /></div>
+     <div> <input type="text" name="emailconifrm" placeholder="Confirm Email" /></div>
+     <div>  <input type="password" name="pass" placeholder="Password" /></div>
+      <div> <input type="password" name="cpass" placeholder="Confirm Password" /></div>
+
     </fieldset>
     <fieldset>Information</h2>
       <select>
@@ -36,10 +38,10 @@
         <option>Mademoiselle
         <option>Monsieur
       </select>
-      <input type="text" name="Nom" placeholder="Votre Nom" />
-      <input type="text" name="Prénom" placeholder="Votre Prénom" />
-      <input type="date" id="start" name="trip-start" />
-      <input type="text" name="tel" placeholder="Votre numero de téléphone" />
+      <div> <input type="text" name="Nom" placeholder="Votre Nom" /></div>
+      <div> <input type="text" name="Prénom" placeholder="Votre Prénom" /></div>
+      <div> <input type="date" id="start" name="trip-start" /></div>
+      <div> <input type="text" name="tel" placeholder="Votre numero de téléphone" /></div>
     </fieldset>
     <fieldset>Domicile</h2>
       <textarea name="address" placeholder="Address"></textarea>
