--- a/inscription.html
+++ b/inscription.html
@@ -21,36 +21,38 @@
       </ul>
     </nav>
   </header>
-  <form id="Inscription" action="inscription.html" method="get">
+  <form id="Inscription" action="inscription.html" method="post">
 
     <h2>Inscription</h2>
-    <fieldset>Email</h2>
-
-     <div> <input type="text" name="email" placeholder="Email" /></div>
-     <div> <input type="text" name="emailconifrm" placeholder="Confirm Email" /></div>
-     <div>  <input type="password" name="pass" placeholder="Password" /></div>
+    <h3>Connexion</h3>
+    <div class="Connexion">
+      <div> <input type="text" name="email" placeholder="Email" required/></div>
+      <div> <input type="text" name="emailconifrm" placeholder="Confirm Email" /></div>
+      <div> <input type="password" name="pass" placeholder="Password" /></div>
       <div> <input type="password" name="cpass" placeholder="Confirm Password" /></div>
+    </div>
+    <h3>Information</h3>
+    <div class="Information">
+      <div><select>
+        <option selected>Civilite</option>
+          <option value="Madame">Madame
+          <option value="Mademoiselle">Mademoiselle
+          <option value="Monsieur">Monsieur
+        </select></div>
 
-    </fieldset>
-    <fieldset>Information</h2>
-      <select>
-        <option>Madame
-        <option>Mademoiselle
-        <option>Monsieur
-      </select>
       <div> <input type="text" name="Nom" placeholder="Votre Nom" /></div>
       <div> <input type="text" name="Prénom" placeholder="Votre Prénom" /></div>
       <div> <input type="date" id="start" name="trip-start" /></div>
       <div> <input type="text" name="tel" placeholder="Votre numero de téléphone" /></div>
-    </fieldset>
-    <fieldset>Domicile</h2>
-      <textarea name="address" placeholder="Address"></textarea>
-      <textarea name="address1" placeholder="Compléments (bâtiment,code...)"></textarea>
-      <textarea name="address2" placeholder="Lieux dit"></textarea>
-      <input type="text" name="cp" placeholder="Code Postale" />
-      <input type="text" name="Ville" placeholder="Ville" />
-      <input type="submit" value="Envoyer" />
-    </fieldset>
+    </div>
+    <h3>Adresse</h3>
+    <div> <textarea name="address" placeholder="Address"></textarea></div>
+    <div> <textarea name="address1" placeholder="Compléments (bâtiment,code...)"></textarea></div>
+    <div> <textarea name="address2" placeholder="Lieux dit"></textarea></div>
+    <div> <input type="text" name="cp" placeholder="Code Postale" /></div>
+    <div> <input type="text" name="Ville" placeholder="Ville" /></div>
+    <div> <input type="submit" value="Envoyer" /></div>
+
   </form>
 </body>
 
