--- a/inscription.html
+++ b/inscription.html
@@ -45,14 +45,17 @@
       <div> <input type="text" name="Prénom" placeholder="Votre Prénom" /></div>
       <div> <input type="date" id="start" name="trip-start" /></div>
       <div> <input type="text" name="tel" placeholder="Votre numero de téléphone" /></div>
-    </div>
+    </div> 
     <h3>Adresse</h3>
+    <div class="Adresse">
+   
     <div> <textarea name="address" placeholder="Address"></textarea></div>
     <div> <textarea name="address1" placeholder="Compléments (bâtiment,code...)"></textarea></div>
     <div> <textarea name="address2" placeholder="Lieux dit"></textarea></div>
     <div> <input type="text" name="cp" placeholder="Code Postale" /></div>
     <div> <input type="text" name="Ville" placeholder="Ville" /></div>
-    <div> <input type="submit" value="Envoyer" /></div>
+   </div> 
+   <div class="buton"> <input type="submit" value="Envoyer" /></div>
 
   </form>
 </body>
