modification logo et shadows

--- a/inscription.html
+++ b/inscription.html
@@ -27,10 +27,10 @@
     <h2>Inscription</h2>
     <h3>Connexion</h3>
     <div class="Connexion">
-      <div> <input type="text" name="email" placeholder="Email" required/></div>
-      <div> <input type="text" name="emailconifrm" placeholder="Confirm Email" /></div>
-      <div> <input type="password" name="pass" placeholder="Password" /></div>
-      <div> <input type="password" name="cpass" placeholder="Confirm Password" /></div>
+      <div> <input type="text" name="email" placeholder=" Email" required/></div>
+      <div> <input type="text" name="emailconifrm" placeholder=" Confirm Email" required/></div>
+      <div> <input type="password" name="pass" placeholder=" Password" required/></div>
+      <div> <input type="password" name="cpass" placeholder=" Confirm Password" required/></div>
     </div>
     <h3>Information</h3>
     <div class="Information">
@@ -41,19 +41,19 @@
           <option value="Monsieur">Monsieur
         </select></div>
 
-      <div> <input type="text" name="Nom" placeholder="Votre Nom" /></div>
-      <div> <input type="text" name="Prénom" placeholder="Votre Prénom" /></div>
-      <div> <input type="date" id="start" name="trip-start" /></div>
-      <div> <input type="text" name="tel" placeholder="Votre numero de téléphone" /></div>
+      <div> <input type="text" name="Nom" placeholder=" Votre Nom" required/></div>
+      <div> <input type="text" name="Prénom" placeholder=" Votre Prénom" required/></div>
+      <div> <input type="date" id="start" name="trip-start" required/></div>
+      <div> <input type="text" name="tel" placeholder=" Votre numero de téléphone" required/></div>
     </div> 
     <h3>Adresse</h3>
     <div class="Adresse">
    
-    <div> <textarea name="address" placeholder="Address"></textarea></div>
-    <div> <textarea name="address1" placeholder="Compléments (bâtiment,code...)"></textarea></div>
-    <div> <textarea name="address2" placeholder="Lieux dit"></textarea></div>
-    <div> <input type="text" name="cp" placeholder="Code Postale" /></div>
-    <div> <input type="text" name="Ville" placeholder="Ville" /></div>
+    <div> <textarea name="address" placeholder=" Address" required></textarea></div>
+    <div> <textarea name="address1" placeholder=" Compléments (bâtiment,code...)"></textarea></div>
+    <div> <textarea name="address2" placeholder=" Lieux dit"></textarea></div>
+    <div> <input type="text" name="cp" placeholder=" Code Postale" /></div>
+    <div> <input type="text" name="Ville" placeholder=" Ville" /></div>
    </div> 
    <div class="buton"> <input type="submit" value="Envoyer" /></div>
 
