--- a/inscription.html
+++ b/inscription.html
@@ -16,9 +16,11 @@
     <nav id="navp">
       <img src="./assets/img/logo1.png" alt="">
       <ul id="headMenu">
+        <li><input type="search" placeholder="    Rechercher"></li>
         <li><a href="">Home</a></li>
         <li><a href="">Menu</a></li>
         <li><a href="">Contact</a></li>
+        <li><a href="">Connexion</a></li>
       </ul>
     </nav>
   </header>
