--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div>NOS UNIVERS</div>
-           <ul id="headMenu"> 
-            <li><a href=""></a>About</a></li>
-            <li><a href="">Menu</a></li>
-            <li><a href="">Contact</a></li>
-           </ul>
-
-        </nav>
+        <nav id="navp">
+            <img src="./assets/img/logo1.png" alt="">
+            <ul id="headMenu">
+              <li><a href="">Home</a></li>
+              <li><a href="">Menu</a></li>
+              <li><a href="">Contact</a></li>
+            </ul>
+          </nav>
         <div></div>
     </header>
 </body>
