--- a/connexion.html
+++ b/connexion.html
@@ -8,62 +8,67 @@
     <link rel="stylesheet" href="./assets/css/connexion.css">
     <link rel="stylesheet" href="./assets/css/form.css">
     <link rel="stylesheet" href="./assets/css/menu.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
   </head>
   <body>
     <header>
       <nav id="navp">
         <img src="./assets/img/logo1.png" alt="">
         <ul id="headMenu">
+        <li><input type="search" placeholder="Rechercher"></li>
           <li><a href="">Home</a></li>
           <li><a href="">Menu</a></li>
           <li><a href="">Contact</a></li>
-          <li><a href="./connexion.html">Connexion</a></li>
+          <li><a href="./connexion.html"><i class="fa-solid fa-user"></i></a></li>
         </ul>
       </nav>
     </header>
     <main>
       <div class="hearderConnexion">
         <h1>Connexion</h1>
-          <p>
-            Connectez-vous pour accéder à votre compte et retrouver tous vos
-            avantages.
-          </p>
       </div>
       <div class="box">
         <div class="row">
           <div class="column">
             <div class="left-column">
+             
               <h3>J'ai un compte <span class="logoTitre">PetStore</span></h3>
               
               <form action="" method="post">
                 <div class="form-group">
                   <label for="email">Email </label>
-                  <input type="text" name="email" />
+                  <input type="text" name="email" required />
                 </div>
                 <div class="form-group">
-                  <label for="">Mot de passe</label>
-                  <input type="text" name="password" />
+                  <label for="password">Mot de passe</label>
+                  <input type="password" name="password" required />
+                </div> 
+                <div class="form-group">
+                   <a class="passwordOublie" href="#">Mot de passe oublié ?</a>
                 </div>
                 <div class="form-group">
-                  <input type="submit" value="Connexion" id="submit" />
-                </div>
-                <div class="form-group">
-                  <a href="#">Mot de passe oublié ?</a>
+                  <input type="submit" value="Connexion" id="submitConnex" />
                 </div>
               </form>
             </div>
           </div>
           <div class="column">
             <div class="right-column">
-                <h3> Je crée mon compte <span class="logoTitre">PetStore</span></h3>
+                <h3 class="nouveauCompte"> Je crée mon compte <span class="logoTitre">PetStore</span></h3>
                <p><i>L'inscription est simple et gratuite !</i></p>
                <div class="form-group">
                <p>
-                    <ul>
-                        <li> Consulter vos points et remises de votre carte de fidélité PetStore</li>
-                        <li>Gérez vos informations personnelles</li>
+                    <ul class="listePrivileges">
+                        <li> Consulter vos points et remises de votre carte de fidélité <span class="logoTitre">PetStore</span></li>
+                        <li> Gérez vos informations personnelles</li>
                         <li> Suivez vos commandes passées en magasin ou en ligne</li>
-                        <li>et encore de nombreux avantages...</li>
+                        <li> et encore de nombreux avantages...</li>
                     </ul>
                 </p>
                 <div class="form-group">
