--- a/inscription.html
+++ b/inscription.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="./assets/css/menu.css">
   <link rel="stylesheet" href="./assets/css/form.css">
   <link rel="stylesheet" href="./assets/css/inscription.css">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+  integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
   <title>Inscription</title>
 </head>
 
@@ -15,12 +22,12 @@
   <header>
     <nav id="navp">
       <img src="./assets/img/logo1.png" alt="">
-      <ul id="headMenu">
+        <ul id="headMenu">
         <li><input type="search" placeholder="    Rechercher"></li>
-        <li><a href="">Home</a></li>
-        <li><a href="">Menu</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">Connexion</a></li>
+        <i class="fa-solid fa-house"></i>
+          <i class="fa-solid fa-phone"></i>
+        <i class="fa-solid fa-user"></i>
+        <i class="fa-solid fa-basket-shopping"></i>
       </ul>
     </nav>
   </header>
