menu nav terminer

--- a/inscription.html
+++ b/inscription.html
@@ -22,11 +22,33 @@
       <nav id="navp">
         <img src="./assets/img/logo1.png" alt="" />
         <ul id="headMenu">
-          <input type="search" placeholder="    Rechercher" />
-         <li><a href=""> <i class="fa-solid fa-house fa-2xl"></i><br><br>Home</a></li> 
-          <li><a href=""><i class="fa-solid fa-phone fa-2xl"></i><br><br>Contact</a></li> 
-          <li><a href=""><i class="fa-solid fa-user fa-2xl"></i><br><br>Connexion</a></li> 
-          <li><a href=""> <i class="fa-solid fa-basket-shopping fa-2xl"></i><br><br>Panier</a></li> 
+          <div class="input"><input type="search" placeholder="    Rechercher" /></div>
+          <li>
+            <a href="#">
+              <div class="icon"><i class="fa-solid fa-house fa-2xl"></i></div>
+              <div><span>Home</span></div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="icon"><i class="fa-solid fa-user fa-2xl"></i></div>
+              <div><span>Connexion</span></div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="icon"><i class="fa-solid fa-phone fa-2xl"></i></div>
+              <div><span>Contact</span></div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="icon">
+                <i class="fa-solid fa-basket-shopping fa-2xl"></i>
+              </div>
+              <div><span>Panier</span></div>
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
