--- a/inscription.html
+++ b/inscription.html
@@ -22,7 +22,7 @@
       <nav id="navp">
         <img src="./assets/img/logo1.png" alt="" />
         <ul id="headMenu">
-          <div class="input"><input type="search" placeholder="    Rechercher" /></div>
+          <div class="container"><input type="search" placeholder="Rechercher ..."/><button type="submit">Search</button></div>
           <li>
             <a href="#">
               <div class="icon"><i class="fa-solid fa-house fa-2xl"></i></div>
