fichier connexion.html ajout definition title + lien connexion et contact du menu

--- a/connexion.html
+++ b/connexion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Connexion</title>
+    <title>PetStore - Connexion</title>
     <link rel="stylesheet" href="./assets/css/connexion.css">
     <link rel="stylesheet" href="./assets/css/form.css">
     <link rel="stylesheet" href="./assets/css/menu.css">
@@ -19,7 +19,7 @@
   <body>
     <header>
       <nav id="navp">
-        <img src="./assets/img/logo1.png" alt="" />
+        <a href="#"><img src="./assets/img/logo1.png" alt="" /></a>
         <ul id="headMenu">
           <div class="container"><input type="search" placeholder="Rechercher ..."/><button type="submit">Search</button></div>
           <li>
@@ -29,13 +29,13 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="./connexion.html">
               <div class="icon"><i class="fa-solid fa-user fa-2xl"></i></div>
               <div><span>Connexion</span></div>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="./contact.html">
               <div class="icon"><i class="fa-solid fa-phone fa-2xl"></i></div>
               <div><span>Contact</span></div>
             </a>
