--- a/index.html
+++ b/index.html
@@ -1,23 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PETSSTORE</title>
-    <link rel="stylesheet" href="./assets/css/accueil.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PetStore - Home</title>
+  <link rel="stylesheet" href="./assets/css/menu.css">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+  integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
 </head>
 <body>
-    <header>
-        <nav id="navp">
-            <img src="./assets/img/logo1.png" alt="">
-            <ul id="headMenu">
-              <li><a href="">Home</a></li>
-              <li><a href="">Menu</a></li>
-              <li><a href="">Contact</a></li>
-            </ul>
-          </nav>
-        <div></div>
-    </header>
+  <header>
+    <nav id="navp">
+      <a href="#"><img src="./assets/img/logo1.png" alt="" /></a>
+      <ul id="headMenu">
+        <div class="container"><input type="search" placeholder="Rechercher ..."/><button type="submit">Search</button></div>
+        <li>
+          <a href="#">
+            <div class="icon"><i class="fa-solid fa-house fa-2xl"></i></div>
+            <div><span>Home</span></div>
+          </a>
+        </li>
+        <li>
+          <a href="./connexion.html">
+            <div class="icon"><i class="fa-solid fa-user fa-2xl"></i></div>
+            <div><span>Connexion</span></div>
+          </a>
+        </li>
+        <li>
+          <a href="./contact.html">
+            <div class="icon"><i class="fa-solid fa-phone fa-2xl"></i></div>
+            <div><span>Contact</span></div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="icon">
+              <i class="fa-solid fa-basket-shopping fa-2xl"></i>
+            </div>
+            <div><span>Panier</span></div>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
